# vIPer

./: .pre-commit-config.yaml  README.md  Vipvalues.csv  cli.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  vip.py
src/: vipper.py
tests/: test_expected_value.py
viper/: utils.py  viper.py
viper/ressources/: Vipvalues.csv
