[tool.poetry]
name = "viper"
version = "1.0.0"
description = "Here there is the new python code relative to the paper \"Estimating the vertical ionization potential of single-stranded DNA molecules\" (M.Rooman and F. Pucci, submitted)."
authors = ["PUCCI Fabrizio <fabrizio.pucci@ulb.be>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.26.4"



[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
ruff = "^0.7.3"
pre-commit = "^4.0.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
